Fix momentum scrolling on iOS

--- a/src/assets/stylesheets/_menu.scss
+++ b/src/assets/stylesheets/_menu.scss
@@ -50,6 +50,7 @@
   z-index: 100;
   transition: transform 0.4s cubic-bezier(0, 0, 0.2, 1);
   transform: translateY(-100%);
+  -webkit-overflow-scrolling: touch; // fix momentum scrolling for iOS
 
   &.is--visible {
     pointer-events: auto;
